Implements functionalities to show the approved and not approved comments count

--- a/apps/havana500-admin/src/app/features/dashboard/smart/dashboard.component.html
+++ b/apps/havana500-admin/src/app/features/dashboard/smart/dashboard.component.html
@@ -113,8 +113,11 @@
                                 </div>
 
                                 <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
-                                    <span class="h4 secondary-text text-truncate">{{widgets.commentsWidget.data.extra.label}}:</span>
-                                    <span class="h4 ml-8">{{widgets.commentsWidget.data.extra.count[widgets.commentsWidget.currentRange]}}</span>
+                                    <span class="h4 secondary-text text-truncate">{{widgets.commentsWidget.data.extra.aproved.label}}:</span>
+                                    <span class="h4 ml-8">{{widgets.commentsWidget.data.extra.aproved.count[widgets.commentsWidget.currentRange]}}</span>
+                                    <span style="width: 20px ;"></span>
+                                    <span class="h4 secondary-text text-truncate">{{widgets.commentsWidget.data.extra.notAproved.label}}:</span>
+                                    <span class="h4 ml-8">{{widgets.commentsWidget.data.extra.notAproved.count[widgets.commentsWidget.currentRange]}}</span>                               
                                 </div>
                             </div>
                             <!-- / Front -->
