--- a/apps/havana500-admin/src/app/features/article/dummy/create-update-article.component.html
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update-article.component.html
@@ -25,14 +25,14 @@
                 </div>
 
                 <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
-                    <mat-icon class="mr-12 mt-12"></mat-icon>
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12"></mat-icon>
                     <mat-form-field fxFlex>
                         <input #title name="title" formControlName="title" placeholder="Title" matInput required>
                     </mat-form-field>
                 </div>
 
                 <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
-                    <mat-icon class="mr-12 mt-12"></mat-icon>
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12"></mat-icon>
                     <mat-form-field fxFlex>
                         <textarea name="body" formControlName="body" placeholder="Body of the article..." matInput
                             required></textarea>
@@ -40,59 +40,66 @@
                 </div>
 
                 <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
-                    <mat-slide-toggle name="allowComments" formControlName="allowComments" class="mr-24" aria-label="Allow Comments">
-                        Allow Comments
-                    </mat-slide-toggle>
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12"></mat-icon>
+                    <mat-form-field fxFlex>
+                        <mat-select formControlName="sectionId" placeholder="Select a section" required>
+                            <mat-option *ngFor="let section of sections" [value]="section.id">
+                                {{section.name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
                 </div>
 
-                <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
-                    <mat-slide-toggle name="allowAnonymousComments" formControlName="allowAnonymousComments" class="mr-24"
-                        aria-label="Allow Anonymous Comments">
+
+                <div class="mb-24" fxLayout="row wrap" fxLayoutAlign="space-between start">
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12"></mat-icon>
+                    <mat-slide-toggle [ngStyle.xs]="'height: 5rem;'" name="allowComments" formControlName="allowComments"
+                        class="mr-24 article-field__size-xl" aria-label="Allow Comments">
+                        Allow Comments
+                    </mat-slide-toggle>
+
+                    <mat-slide-toggle [ngStyle.xs]="'height: 5rem;'" name="allowAnonymousComments" formControlName="allowAnonymousComments"
+                        class="mr-24 article-field__size-xl" aria-label="Allow Anonymous Comments">
                         Allow Anonymous Comments
                     </mat-slide-toggle>
                 </div>
 
-                <div class="mb-24 " fxLayout="row " fxLayoutAlign="start start ">
-                    <mat-icon class="mr-12 mt-12 ">calendar</mat-icon>
+                <!-- <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12"></mat-icon>
+                    <mat-slide-toggle name="allowAnonymousComments" formControlName="allowAnonymousComments" class="mr-24"
+                        aria-label="Allow Anonymous Comments">
+                        Allow Anonymous Comments
+                    </mat-slide-toggle>
+                </div> -->
 
-                    <mat-form-field class="mr-sm-24" fxFlex>
-                        <input matInput [matDatepicker]="startDatePicker" placeholder="Start Date" name="start"
-                            formControlName="startDateUtc">
-                        <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-                        <mat-datepicker #startDatePicker></mat-datepicker>
-                    </mat-form-field>
 
-                    <mat-form-field class="no-errors-spacer" fxFlex mat-no-float>
-                        <input matInput placeholder="Start Time">
-                    </mat-form-field>
+                <div class="mb-24 " fxLayout="row wrap" fxLayoutAlign="space-evenly flex-start">
 
-                </div>
-
-                <div class="mb-24 " fxLayout="row " fxLayoutAlign="start start ">
-                    <mat-icon class="mr-12 mt-12 ">calendar</mat-icon>
-
-                    <mat-form-field class="mr-sm-24" fxFlex>
+                    <mat-form-field class="mr-sm-24 article-field__size-lg" fxFlex>
                         <input matInput [matDatepicker]="endDatePicker" placeholder="End Date" name="end"
                             formControlName="endDateUtc">
                         <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
                         <mat-datepicker #endDatePicker></mat-datepicker>
                     </mat-form-field>
 
-                    <mat-form-field class="no-errors-spacer" fxFlex mat-no-float>
-                        <input matInput placeholder="End Time">
+                    <mat-form-field class="mr-sm-24 article-field__size-lg" fxFlex>
+                        <input matInput [matDatepicker]="startDatePicker" placeholder="Start Date" name="start"
+                            formControlName="startDateUtc">
+                        <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                        <mat-datepicker #startDatePicker></mat-datepicker>
                     </mat-form-field>
 
                 </div>
 
                 <div class="mb-24 " fxLayout="row " fxLayoutAlign="start start ">
-                    <mat-icon class="mr-12 mt-12 "></mat-icon>
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12 "></mat-icon>
                     <mat-form-field fxFlex>
                         <input name="metaKeywords" formControlName="metaKeywords" matInput placeholder="Meta Keywords">
                     </mat-form-field>
                 </div>
 
                 <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
-                    <mat-icon class="mr-12 mt-12"></mat-icon>
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12"></mat-icon>
                     <mat-form-field fxFlex>
                         <textarea name="metaDescription" formControlName="metaDescription" placeholder="Meta Description"
                             matInput></textarea>
@@ -100,26 +107,23 @@
                 </div>
 
                 <div class="mb-24 " fxLayout="row " fxLayoutAlign="start start ">
-                    <mat-icon class="mr-12 mt-12 "></mat-icon>
+                    <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12 "></mat-icon>
                     <mat-form-field fxFlex>
                         <input name="metaTitle" formControlName="metaTitle" matInput placeholder="Meta Title">
                     </mat-form-field>
                 </div>
 
-                <div class="mb-24 " fxLayout="row " fxLayoutAlign="start start ">
-                    <mat-icon class="mr-12 mt-12 "></mat-icon>
-                    <mat-form-field fxFlex>
+                <div class="mb-24 " fxLayout="row " fxLayoutAlign="space-around start">
+                    <!-- <mat-icon class="mr-12 mt-12 "></mat-icon> -->
+                    <mat-form-field class="article-field__size-md" fxFlex>
                         <input type="number" name="editorWeight" formControlName="editorWeight" matInput placeholder="Editor Weight">
                     </mat-form-field>
-                </div>
 
-                <div class="mb-24 " fxLayout="row " fxLayoutAlign="start start ">
-                    <mat-icon class="mr-12 mt-12 "></mat-icon>
-                    <mat-form-field fxFlex>
+                    <mat-form-field class="article-field__size-md" fxFlex>
                         <input type="number" name="readingTime" formControlName="readingTime" matInput placeholder="Reading Time">
+                        <span matSuffix>min&nbsp;</span>
                     </mat-form-field>
                 </div>
-
 
 
             </div>
