Move to its own folder files of component CreateUpdateArticle

--- a/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.scss
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.scss
@@ -1,4 +1,4 @@
-@import './../../../core/scss/ant';
+@import '../../../../core/scss/ant';
 
 .article-form-dialog {
   @include media-breakpoint('xs') {
