Styled add Article button

--- a/apps/havana500-admin/src/app/features/article/smart/article-home.component.html
+++ b/apps/havana500-admin/src/app/features/article/smart/article-home.component.html
@@ -29,8 +29,12 @@
             </div>
             <!-- / SEARCH -->
 
-            <button (click)="openCreateDialog()" mat-raised-button class="add-article-button mat-white-bg my-12 mt-sm-0">
+            <!-- <button (click)="openCreateDialog()" mat-raised-button class="add-article-button mat-white-bg my-12 mt-sm-0">
                 <span>ADD NEW ARTICLE</span>
+            </button> -->
+
+            <button (click)="openCreateDialog()" mat-mini-fab color="warn">
+                <mat-icon aria-label="Add Article">add</mat-icon>
             </button>
 
         </div>
