--- a/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
+++ b/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
@@ -8,6 +8,11 @@
       max-width: 480px;
     }
 
+    .mat-mini-fab:hover {
+      box-shadow: 0 3px 5px -1px rgba(224, 14, 14, 0.5),
+        0 6px 10px 0 rgba(224, 14, 14, 0.2), 0 1px 18px 0 rgba(224, 14, 14, 0.3);
+    }
+
     @include media-breakpoint-down(xs) {
       height: 176px !important;
       min-height: 176px !important;
