--- a/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.html
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.html
@@ -1,11 +1,34 @@
+<mat-menu #tagMenu="matMenu" [overlapTrigger]="false">
+
+    <form class="px-16 py-8" #newTagForm="ngForm" (submit)="addTag(newTagForm)" (click)="$event.stopPropagation()"
+        fxLayout="column" fxLayoutAlign="start end">
+
+        <mat-form-field floatPlaceholder="never" (click)="$event.stopPropagation()" fxFlex>
+            <input matInput ngModel #tagNameField #tagName="ngModel" name="name" placeholder="Tag title" required>
+        </mat-form-field>
+
+        <button mat-raised-button class="mat-accent" aria-label="Add Tag" [disabled]="!newTagForm.valid">Add
+            Tag</button>
+    </form>
+
+</mat-menu>
+
 <div class="dialog-content-wrapper">
     <mat-toolbar color="warn" matDialogTitle class="mat-accent m-0">
 
         <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-            <span class="title dialog-title">{{!onEdit?"Create Article":"Edit Article"}}</span>
+
+            <button mat-icon-button class="" [matMenuTriggerFor]="tagMenu" #tagMenuTrigger="matMenuTrigger"
+                (menuOpened)="onTagMenuOpened()">
+                <mat-icon>label</mat-icon>
+            </button>
+
+            <span tabindex="-1" class="title dialog-title">{{!onEdit?"Create Article":"Edit Article"}}</span>
+
             <button mat-button class="mat-icon-button" (click)="dialogRef.close()" aria-label="Close dialog">
                 <mat-icon>close</mat-icon>
             </button>
+
         </mat-toolbar-row>
 
         <mat-toolbar-row class=" py-8 py-sm-16" fxLayout="column" fxLayoutAlign="center center">
@@ -13,7 +36,7 @@
         </mat-toolbar-row>
 
         <mat-toolbar-row class="toolbar-bottom mat-accent-900-bg">
-            <ant-labels-bar [article]="article"></ant-labels-bar>
+            <ant-labels-bar [article]="article" (deleteTag)="deleteArticleTag($event)"></ant-labels-bar>
         </mat-toolbar-row>
 
     </mat-toolbar>
