--- a/apps/havana500-admin/src/app/features/article/dummy/labels-bar/labels-bar.component.html
+++ b/apps/havana500-admin/src/app/features/article/dummy/labels-bar/labels-bar.component.html
@@ -1,8 +1,8 @@
-<div class="labels-bar" fxLayout="row wrap" fxLayoutAlign="space-between start">
-    <div class="label" fxLayout="row" *ngFor="let label of article.tags">
+<div class="labels-bar" fxLayout="row wrap" fxLayoutAlign="flex-start flex-start">
+    <div class="label" fxLayout="row" *ngFor="let label of article?.tags">
         <span class="label-text">{{label.name}}</span>
-        <button mat-icon-button>
-            <mat-icon class="label-close-icon" aria-label="Close">close</mat-icon>
+        <button mat-icon-button (click)="deleteLabel(label.id)">
+            <mat-icon class="label-close-icon" aria-label="Delete">close</mat-icon>
         </button>
     </div>
 </div>
