Fixes the table to display the info about the amount of new comments for each article
TODO:
The pagination is not working right now, but anyway, if we get the new comments
since 1-5 days, the table won't have too many comments

--- a/apps/havana500-admin/src/app/features/comment/smart/comment-home.component.html
+++ b/apps/havana500-admin/src/app/features/comment/smart/comment-home.component.html
@@ -108,7 +108,14 @@
 
                 <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
 
-                
+                <mat-row *matRowDef="let article; columns: columnsToDisplay;" class="article" matRipple (click)="openCreateDialog(article)">
+                </mat-row>
+
+                <mat-paginator #paginator [length]="dataSource.currentLength" [pageIndex]="0" [pageSize]="10"
+                [pageSizeOptions]="[5, 10, 25, 100]">
+
+            </mat-paginator>
+
 
             </mat-table>
 <!-- 
