Change the name of columns
Change the dataSource to the one that it should use

NOTE:
It's not showing the items now :( :(

--- a/apps/havana500-admin/src/app/features/comment/smart/comment-home.component.html
+++ b/apps/havana500-admin/src/app/features/comment/smart/comment-home.component.html
@@ -14,7 +14,7 @@
             <!-- APP TITLE -->
             <div class="logo my-12 m-sm-0" fxLayout="row" fxLayoutAlign="start center">
                 <mat-icon class="logo-icon mr-16" *antIfOnDom [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">shopping_basket</mat-icon>
-                <span class="logo-text h1" *antIfOnDom [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">Articles</span>
+                <span class="logo-text h1" *antIfOnDom [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">Articulos con nuevos comentarios</span>
             </div>
             <!-- / APP TITLE -->
 
@@ -34,7 +34,7 @@
         <!-- CONTENT CARD -->
         <div class="content-card mat-white-bg">
 
-            <mat-table class="articles-table" #table [dataSource]="articleCommentsInfos" matSort [@animateStagger]="{value:'50'}">
+            <mat-table class="articles-table" #table [dataSource]="dataSource" matSort [@animateStagger]="{value:'50'}">
                 <!-- <mat-table class="articles-table" #table [dataSource]="dataSource" matSort [@animateStagger]="{value:'50'}"> -->
 
                 <!-- ID Column -->
@@ -48,7 +48,7 @@
 
                 <!-- Title Column -->
                 <ng-container matColumnDef="title">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Title</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Titulo</mat-header-cell>
                     <mat-cell *matCellDef="let article">
                         <p class="text-truncate">{{article.title}}</p>
                     </mat-cell>
@@ -92,7 +92,7 @@
 
                 <!-- amountOfComments Column -->
                 <ng-container matColumnDef="amountOfComments">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header fxHide fxShow.gt-sm>amountOfComments</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header fxHide fxShow.gt-sm>Nuevos comentarios</mat-header-cell>
                     <mat-cell *matCellDef="let article" fxHide fxShow.gt-sm>
 
                         <span class="quantity-indicator text-truncate" [ngClass]="{'mat-green-500-bg':article.amountOfComments <= 5, 'mat-amber-500-bg':article.amountOfComments > 5 && article.amountOfComments <= 25,'mat-red-600-bg':article.amountOfComments > 25}">
@@ -108,7 +108,7 @@
 
                 <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
 
-                <mat-row *matRowDef="let article; columns: columnsToDisplay;" class="article" matRipple (click)="openCreateDialog(article)">
+                <mat-row *matRowDef="let article; columns: columnsToDisplay;" class="article" matRipple >
                 </mat-row>
 
                 <mat-paginator #paginator [length]="dataSource.currentLength" [pageIndex]="0" [pageSize]="10"
