With these changes it works.
NOTE:
The issue is with the dataSource that is generic in the implementation

--- a/apps/havana500-admin/src/app/features/comment/smart/comment-home.component.html
+++ b/apps/havana500-admin/src/app/features/comment/smart/comment-home.component.html
@@ -34,7 +34,7 @@
         <!-- CONTENT CARD -->
         <div class="content-card mat-white-bg">
 
-            <mat-table class="articles-table" #table [dataSource]="dataSource" matSort [@animateStagger]="{value:'50'}">
+            <mat-table class="articles-table" #table [dataSource]="articleCommentsInfos" matSort [@animateStagger]="{value:'50'}">
                 <!-- <mat-table class="articles-table" #table [dataSource]="dataSource" matSort [@animateStagger]="{value:'50'}"> -->
 
                 <!-- ID Column -->
