Prepare for aot build

--- a/apps/havana500-admin/src/app/features/layout/layout.component.html
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.html
@@ -6,8 +6,8 @@
     </mat-toolbar>
 
     <mat-sidenav-container style="height:100%">
-        <mat-sidenav class="sidenav nav mat-ant-dark-700-bg" role="navigation" #snav [mode]="over"
-            [fixedInViewport]="true" fixedTopGap="56">
+        <mat-sidenav class="sidenav nav mat-ant-dark-700-bg" role="navigation" #snav [fixedInViewport]="true"
+            fixedTopGap="56">
 
             <mat-nav-list>
 
