--- a/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.scss
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.scss
@@ -58,4 +58,8 @@
     display: flex;
     flex-direction: column;
   }
+
+  .unmaterial-label {
+    font: 500 13px/20px Roboto, 'Helvetica Neue', sans-serif;
+  }
 }
