--- a/apps/havana500-admin/src/styles.scss
+++ b/apps/havana500-admin/src/styles.scss
@@ -1,2 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'app/core/scss/core';
+@import '../../../node_modules/quill/dist/quill.bubble.css';
+@import '../../../node_modules/quill/dist/quill.snow.css';
