Fix components prefix

--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -1,13 +1,13 @@
 <div class="container container__overflowed">
 
     <mat-toolbar class="toolbar mat-elevation-z1 mat-white-500-bg">
-        <ant-toolbar fxFill></ant-toolbar>
+        <hav-toolbar fxFill></hav-toolbar>
     </mat-toolbar>
 
     <div class="main-content">
-        <ant-content></ant-content>
+        <hav-content></hav-content>
 
     </div>
-    <ant-footer class="main-footer"></ant-footer>
+    <hav-footer class="main-footer"></hav-footer>
 
 </div>
