Complete mockup of article-metadata-component

--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
@@ -1,3 +1,26 @@
 <section class="metadata-panel" fxLayout="row" fxLayoutAlign="space-between center">
-    <span translate [translateParams]="{value: article.createdBy}">BY</span>
+    <span translate [translateParams]="{value: article?.createdBy}">BY</span>
+
+    <mat-divider class="metadata-separator" vertical></mat-divider>
+
+    <div fxLayout="row" fxLayoutAlign="center center">
+        <mat-icon class="metadata-icon" aria-label="created-date">watch_later</mat-icon>
+        <span>{{article?.createdAt.toDateString()}}</span>
+    </div>
+
+    <mat-divider class="metadata-separator" vertical></mat-divider>
+
+    <div fxLayout="row" fxLayoutAlign="center center">
+        <mat-icon class="metadata-icon" aria-label="views">visibility</mat-icon>
+        <span>{{article?.views}}</span>
+    </div>
+
+    <mat-divider class="metadata-separator" vertical></mat-divider>
+
+    <div fxLayout="row" fxLayoutAlign="center center">
+        <mat-icon class="metadata-icon" aria-label="comments">comment</mat-icon>
+        <span>{{article?.approvedCommentCount}}</span>
+
+    </div>
+
 </section>
