--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
@@ -1,6 +1,6 @@
 <nav fxFlex fxFill fxLayout="row" fxLayoutAlign="space-between center">
     <mat-icon></mat-icon>
-    <div class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
+    <div fxHide.xs class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
         <a class="mat-white-500-bg" mat-flat-button>EVENTOS</a>
         <a class="mat-white-500-bg" mat-flat-button>ENTRETENIMIENTOS</a>
         <a class="mat-white-500-bg" mat-flat-button>CURIOSIDADES</a>
