--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -11,7 +11,23 @@
 
   <p id="article-body">{{article.body}}</p>
   <mat-chip-list id="article-tags">
-      <mat-chip *ngFor="let tag of article.tags" (click)="onSelectTag(tag)">{{tag.name}}</mat-chip>
+    <mat-chip class="article-tag" *ngFor="let tag of article.tags" (click)="onSelectTag(tag.id)">{{tag.name}}</mat-chip>
   </mat-chip-list>
 
+  <div id="related-articles-outer-container">
+    <h2 id="related-articles-header"></h2>
+
+    <div id="related-articles-cards-container">
+      Places the related articles in here.
+      <!-- for this try to use the grid-list from material -->
+    </div>
+  </div>
+
+  <div id="comments-outer-container">
+    <h2 id="comments-header">Comments</h2>
+
+    <div id="comments-inner-container">
+      <div class="comment-container">This is the container of a single comment.</div>
+    </div>
+  </div>
 </article>
