Implements the basic styles of the Articles views
- Now I'm using bootstrap for the layout, but I think that it's
in conflict with angularMaterial.
- The bootstrap file was added manually, has to be done through some
dependency's file helper or use Bootstrap for Angular.

--- a/libs/shared/src/lib/components/article/article.component.scss
+++ b/libs/shared/src/lib/components/article/article.component.scss
@@ -1,1 +1,44 @@
 @import '../../scss/ant';
+@import '../../css/bootstrap.css';
+
+.font-weight-700 {
+  font-weight: 700;
+}
+
+#article-outer-container {
+  margin-top: 100px;
+
+  #article-title {
+    margin-bottom: 20px;
+    font-size: 4em;
+  }
+
+  #article-header {
+    margin-bottom: 50px;
+  }
+
+  #article-body {
+    margin-bottom: 50px;
+  }
+
+  .article-tag {
+    background-color: #00ffff;
+  }
+
+  #related-articles-outer-container {
+    margin-top: 30px;
+    background-color: #808080;
+
+    #related-articles-header {
+      font-size: 3em;
+    }
+  }
+
+  #comments-outer-container{
+      margin-top: 30px;
+
+      #comments-header{
+          font-size: 3em;
+      }
+  }
+}
