--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -1,21 +1,23 @@
-<article id="article-outer-container">
-  <div id="article-header">
-    <h1 id="article-title">{{article.title}}</h1>
-    <div id="article-reading-time">
-      <span id="article-reading-time-title">Reading Time: </span>{{article.readingTime}}
+<article id="article-outer-container" class="container">
+  <div id="article-header" class="row">
+    <h1 id="article-title" class="col-12">{{article.title}}</h1>
+    <div id="article-reading-time" class="col-md-6 col-xs-12 ">
+      <span id="article-reading-time-title " class="font-weight-700">Reading Time: </span>{{article.readingTime}}
     </div>
-    <div id="article-writer">
-      <span id="article-write-title">By: </span>Get the Article's writer and put it in here
+    <div id="article-writer" class="col-md-6 col-xs-12 ">
+      <span id="article-write-title " class="font-weight-700">By: </span>Get the Article's writer and put it in here
     </div>
   </div>
 
   <p id="article-body">{{article.body}}</p>
+
+  
   <mat-chip-list id="article-tags">
     <mat-chip class="article-tag" *ngFor="let tag of article.tags" (click)="onSelectTag(tag.id)">{{tag.name}}</mat-chip>
   </mat-chip-list>
 
   <div id="related-articles-outer-container">
-    <h2 id="related-articles-header"></h2>
+    <h2 id="related-articles-header">Related articles</h2>
 
     <div id="related-articles-cards-container">
       Places the related articles in here.
