Imports bootstrap in the article.component.scss

--- a/libs/shared/src/lib/components/article/article.component.scss
+++ b/libs/shared/src/lib/components/article/article.component.scss
@@ -1,5 +1,4 @@
-@import '../../scss/ant';
-@import '../../css/bootstrap.css';
+@import "~bootstrap/dist/css/bootstrap.css";
 
 .font-weight-700 {
   font-weight: 700;
