Getting the comments from the comment-home.component
Working as expected

--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -27,6 +27,7 @@
 
   <div id="comments-outer-container">
     <h2 id="comments-header">Comments</h2>
+    <hav-comment-home [articleId]="article.id"></hav-comment-home>
 
     <div id="comments-inner-container">
       <div class="comment-container">This is the container of a single comment.</div>
