Implements service to get the related articles
Calling the service from the article.component
Rendering the related articles through the article.summary component

Right now there is an issue in the article.summary component, gonna fix it and improve it

--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -20,7 +20,7 @@
     <h2 id="related-articles-header">Related articles</h2>
 
     <div id="related-articles-cards-container">
-      Places the related articles in here.
+        <ant-article-summary *ngFor="let article of relatedArticles" [article]="article"></ant-article-summary>
       <!-- for this try to use the grid-list from material -->
     </div>
   </div>
