--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
@@ -5,7 +5,7 @@
 
     <div fxLayout="row" fxLayoutAlign="center center">
         <mat-icon class="metadata-icon" aria-label="created-date">watch_later</mat-icon>
-        <span>{{article?.createdAt.toLocaleDateString()}}</span>
+        <span>{{article?.publicationDateHumanized}}</span>
     </div>
 
     <mat-divider class="metadata-separator" vertical></mat-divider>
