Removes the footer from the layout
There is an issue with the footer, it is not
after all the content

--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -8,6 +8,6 @@
         <hav-content></hav-content>
 
     </div>
-    <hav-footer class="main-footer"></hav-footer>
+    <!-- <hav-footer class="main-footer"></hav-footer> -->
 
 </div>
