--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
@@ -1,13 +1,19 @@
 .metadata-icon {
-  margin-right: 1rem;
+  margin-right: 0.6rem;
 }
 
 .metadata-panel {
-  padding: 0 2rem;
+  padding: 0 1rem;
   min-height: 5rem;
   width: 100%;
+  font-size: .8em;
 }
 
 .metadata-separator {
   height: 100%;
+    min-height: 20px;
+    border-right: 1px solid black;
+    margin: 0 0.4rem 0 0.4rem;
 }
+
+
