--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
@@ -1,10 +1,11 @@
 <nav fxFlex fxFill fxLayout="row" fxLayoutAlign="space-between center">
     <mat-icon></mat-icon>
     <div fxHide.xs class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
-        <a class="mat-white-500-bg" mat-flat-button>EVENTOS</a>
+        <a class="mat-white-500-bg" mat-flat-button *ngFor="let section of sections">{{section.name}}</a>
+        <!-- <a class="mat-white-500-bg" mat-flat-button>EVENTOS</a>
         <a class="mat-white-500-bg" mat-flat-button>ENTRETENIMIENTOS</a>
         <a class="mat-white-500-bg" mat-flat-button>CURIOSIDADES</a>
         <a class="mat-white-500-bg" mat-flat-button>EXPERIENCIAS</a>
-        <a class="mat-white-500-bg" mat-flat-button>GALERÍA</a>
+        <a class="mat-white-500-bg" mat-flat-button>GALERÍA</a> -->
     </div>
 </nav>
